--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,10 @@
-$accent1: #3a28e3;
-$accent2: #9e28e3;
+$accent1: #000000;
 body {
 	padding: 0;
 	margin: 0;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	overflow: hidden;
-	animation: animateBg 15s linear infinite;
-	background-image: linear-gradient(45deg, $accent1, $accent2, $accent1, $accent2);
+	background-image: linear-gradient(45deg, $accent1, $accent1);
 	background-size: 300% 100%;
 }
 
@@ -14,7 +12,7 @@ body {
 	height: 100vh;
 	width: 100%;
 	font-size: xx-large;
-	color: #f2f2f2;
+	color: #ffffff;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -41,7 +39,7 @@ ul.topnav li {
 
 ul.topnav li a {
 	display: block;
-	color: #f2f2f2;
+	color: #ffffff;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
@@ -81,7 +79,7 @@ ul.topnav li.right {
 .dropdown-content {
 	display: none;
 	position: absolute;
-	background-color: #f9f9f9;
+	background-color: #ffffff;
 	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	padding: 12px 16px;
@@ -91,13 +89,4 @@ ul.topnav li.right {
 
 .dropdown:hover .dropdown-content {
 	display: block;
-}
-
-@keyframes animateBg {
-	0% {
-		background-position: 0% 0%;
-	}
-	100% {
-		background-position: 100% 0%;
-	}
 }
