--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,29 @@
-$accent1: #000000;
+$accent1: #4f3fda;
+$accent2: #9e28e3;
 body {
 	padding: 0;
 	margin: 0;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	overflow: hidden;
-	background-image: linear-gradient(45deg, $accent1, $accent1);
-	background-size: 300% 100%;
+	animation: animateBg 15s linear infinite alternate;
+	background-image: linear-gradient(-45deg, $accent1, $accent2,);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+	
 }
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 
 #titlebox {
 	height: 100vh;
