--- a/src/index.scss
+++ b/src/index.scss
@@ -37,9 +37,9 @@ body {
 	padding: 0;
 	border: 0;
 	margin: 0;
+	text-align: center; 
 }
 
-/* Styles for the navigation bar */
 ul.topnav {
 	list-style-type: none;
 	margin: 0;
@@ -89,7 +89,7 @@ ul.topnav li.right {
 		float: none;
 	}
 	ul.topnav li a {
-		text-align: left;
+		text-align: center;
 		border-radius: 0 !important;
 	}
 }
