--- a/src/index.scss
+++ b/src/index.scss
@@ -129,3 +129,14 @@ ul.topnav li.right {
 
 
 }
+
+.footer {
+    text-align: center;
+    font-size: 10px;
+    margin-top: auto;
+    color: #ffffff;
+    position: fixed;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+}
