--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@ $accent2: #df76df;
 body {
 	padding: 0;
 	margin: 0;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-family: 'Fredoka', sans-serif;
 	overflow: hidden;
 	animation: animateBg 15s linear infinite alternate;
 	background-image: linear-gradient(-45deg, $accent1, $accent2,);
